Modulo de favoritos terminado, factories creados y seeders mejorados
